.metadata/.plugins/org.eclipse.cdt.ui/pascal triangle.build.log
17:23:45 **** Incremental Build of configuration Debug for project pascal triangle ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\pascal triangle.o" "..\\src\\pascal triangle.c" 
..\src\pascal triangle.c: In function 'main':
..\src\pascal triangle.c:16:13: error: 'n' undeclared (first use in this function)
  for(i=1;i<=n;i++){
             ^
..\src\pascal triangle.c:16:13: note: each undeclared identifier is reported only once for each function it appears in
..\src\pascal triangle.c:20:8: warning: self-comparison always evaluates to true [-Wtautological-compare]
   {if(i==i||j==1){
        ^~
..\src\pascal triangle.c: At top level:
..\src\pascal triangle.c:30:1: error: expected identifier or '(' before 'return'
 return 0;
 ^~~~~~
..\src\pascal triangle.c:31:1: error: expected identifier or '(' before '}' token
 }
 ^

17:23:45 Build Failed. 3 errors, 1 warnings. (took 190ms)

